Adapt API documentation.
