# src/main/kotlin/com/onecosys/getthingsdone/web/rest/TaskController.kt
@@ -5,6 +5,12 @@ import com.onecosys.getthingsdone.model.dto.TaskCreateRequest
 import com.onecosys.getthingsdone.model.TaskStatus
 import com.onecosys.getthingsdone.model.dto.TaskUpdateRequest
 import com.onecosys.getthingsdone.service.TaskService
+import io.swagger.v3.oas.annotations.Operation
+import io.swagger.v3.oas.annotations.media.ArraySchema
+import io.swagger.v3.oas.annotations.media.Content
+import io.swagger.v3.oas.annotations.media.Schema
+import io.swagger.v3.oas.annotations.responses.ApiResponse
+import io.swagger.v3.oas.annotations.responses.ApiResponses
 import jakarta.validation.Valid
 import org.springframework.http.HttpHeaders
 import org.springframework.http.HttpStatus
@@ -25,14 +31,56 @@ import org.springframework.web.bind.annotation.RestController
 @RequestMapping("api/v1/tasks")
 class TaskController(private val service: TaskService) {
 
+    @Operation(summary = "Get all tasks", tags = ["task"])
+    @ApiResponses(
+        value = [
+            ApiResponse(
+                responseCode = "200", description = "all open & closed tasks", content = [
+                    (Content(
+                        mediaType = "application/json",
+                        array = (ArraySchema(schema = Schema(implementation = TaskFetchResponse::class)))
+                    ))]
+            ),
+            ApiResponse(responseCode = "400", description = "Bad Request", content = [Content()])]
+    )
     @GetMapping
     fun getTasks(
         @RequestParam("status", required = false) status: TaskStatus?
     ): ResponseEntity<Set<TaskFetchResponse>> = ResponseEntity.ok(service.getTasks(status))
 
+    @Operation(summary = "Get task by its ID", tags = ["task"])
+    @ApiResponses(
+        value = [
+            ApiResponse(
+                responseCode = "200",
+                description = "Found the task by the supplied ID",
+                content = [Content(
+                    mediaType = "application/json",
+                    schema = Schema(implementation = TaskFetchResponse::class)
+                )]
+            ),
+            ApiResponse(responseCode = "404", description = "Task not found", content = [Content()]),
+            ApiResponse(responseCode = "400", description = "Invalid ID supplied", content = [Content()])
+        ]
+    )
     @GetMapping("{id}")
-    fun getTaskById(@PathVariable id: Long): ResponseEntity<TaskFetchResponse> = ResponseEntity.ok(service.getTaskById(id))
+    fun getTaskById(@PathVariable id: Long): ResponseEntity<TaskFetchResponse> =
+        ResponseEntity.ok(service.getTaskById(id))
 
+    @Operation(summary = "Create a new task", tags = ["task"])
+    @ApiResponses(
+        value = [
+            ApiResponse(
+                responseCode = "201",
+                description = "Task successfully created",
+                content = [Content(
+                    mediaType = "application/json",
+                    schema = Schema(implementation = TaskFetchResponse::class)
+                )]
+            ),
+            ApiResponse(responseCode = "400", description = "Invalid input", content = [Content()]),
+        ]
+    )
     @PostMapping
     fun createTask(
         @Valid @RequestBody
@@ -42,6 +90,21 @@ class TaskController(private val service: TaskService) {
         return ResponseEntity(task, HttpStatus.CREATED)
     }
 
+    @Operation(summary = "Update an existing task", tags = ["task"])
+    @ApiResponses(
+        value = [
+            ApiResponse(
+                responseCode = "200",
+                description = "Task successfully updated",
+                content = [Content(
+                    mediaType = "application/json",
+                    schema = Schema(implementation = TaskFetchResponse::class)
+                )]
+            ),
+            ApiResponse(responseCode = "400", description = "Invalid input", content = [Content()]),
+            ApiResponse(responseCode = "404", description = "Task not found", content = [Content()])
+        ]
+    )
     @PatchMapping("{id}")
     fun updateTask(
         @PathVariable id: Long,
@@ -49,6 +112,14 @@ class TaskController(private val service: TaskService) {
         updateRequest: TaskUpdateRequest
     ): ResponseEntity<TaskFetchResponse> = ResponseEntity.ok(service.updateTask(id, updateRequest))
 
+    @Operation(summary = "Delete a task by its ID", tags = ["task"])
+    @ApiResponses(
+        value = [
+            ApiResponse(responseCode = "204", description = "Task successfully deleted", content = [Content()]),
+            ApiResponse(responseCode = "400", description = "Invalid ID supplied", content = [Content()]),
+            ApiResponse(responseCode = "404", description = "Task not found", content = [Content()])
+        ]
+    )
     @DeleteMapping("{id}")
     fun deleteTask(@PathVariable id: Long): ResponseEntity<Unit> {
         val headerValue: String = service.deleteTask(id)
